--- a/test.ipynb
+++ b/test.ipynb
@@ -34,6 +34,18 @@
    "source": [
     "from keplergl import KeplerGl      # version: 0.3.2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c088a31d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash import Dash, dcc, html, Input, Output\n",
+    "import plotly.express as px\n",
+    "from dash import _jupyter"
+   ]
   }
  ],
  "metadata": {
